add page header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,6 @@
     </nav>
 
     <section class="header__page-header">
-        <h1 class="header__page-header-title">DevBees</h1>
+        <h1 class="header__page-header-title">DevBees<span class="blinking-cursor"></span></h1>
     </section>
 </header>
