--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Jura');
+@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro'); //to change later
