--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="header">
     <nav class="header__nav">
         <div class="header__logo">
-            <a href="{{ page.path }}/">bee a maze</a>
+            <a href="{{ page.path }}/">
+                <img src="{{ page.path }}/assets/images/logo.png" alt="be a maze">
+            </a>
         </div>
         <ul class="header__menu">
             <li class="header__menu-item"><a href="#o-nas">O nas</a></li>
