--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -99,7 +99,14 @@
 }
 
 .main {
-    margin:88px 250px 40px 250px;
+    margin:88px 0 40px 0;
+    display:grid;
+    grid-template-columns: 250px auto 250px;
+    grid-template-rows: auto;
+}
+
+.fragment {
+    grid-column: 2 / 3;
 }
 
 .fragment__item {
@@ -197,6 +204,7 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
+    grid-column: 1 / 4;
 }
 
 .fragment--tight {
