remove outline from form

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -297,6 +297,7 @@
     border:4px solid rgba(183, 18, 27, 1);
     width:100%;
     margin-bottom:12px;
+    outline: none;
 }
 
 .form-textarea-row {
