--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -340,3 +340,34 @@
     display:block;
     font-family:'Raleway', sans-serif;
 }
+
+.footer__copyright {
+    font-family: 'Raleway', sans-serif;
+    font-size:17px;
+    color:#fff;
+    margin:0;
+    padding:0;
+}
+
+.footer {
+    background-color:#7B7B7B;
+    height: 90px;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer__social-media-nav {
+    padding:11.5px;
+}
+
+.footer__social-media-menu {
+    list-style:none;
+    margin:0;
+    padding:0;
+}
+
+.footer__social-media-menu li {
+    display:inline-block;
+    margin:0 5px 0 5px;
+}
