--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@
 .header {
     background-image: url("../assets/images/header.gif");
     background-repeat: no-repeat;
-    background-size: 100vw auto;
+    background-size: 100vw 100vh;
     display:grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
@@ -101,7 +101,7 @@
 .main {
     margin:88px 0 40px 0;
     display:grid;
-    grid-template-columns: 250px auto 250px;
+    grid-template-columns: 1fr 5.6fr 1fr;
     grid-template-rows: auto;
 }
 
