add basic responsive skeleton

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,7 +9,7 @@
     display:grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
-    padding-top:36px;
+    padding-top:2.25em;
     height:100vh;
 }
 
@@ -22,7 +22,7 @@
 
 .header__logo {
     grid-column: 1 / 2;
-    padding:10px 0 0 53px;
+    padding:0.625em 0 0 3.3125em;
 }
 
 .header__menu {
@@ -33,10 +33,10 @@
 
 .header__menu-item {
     font-family: $header-menu-font-family;
-    font-size:21px;
-    line-height: 29px;
+    font-size:1.3125em;
+    line-height: 1.380952380952381em;
     display: inline-block;
-    margin-right:24.5px;
+    margin-right:1.18em;
 }
 
 .header__menu a {
@@ -52,15 +52,15 @@
 
 .header__menu-item-special {
     font-family: $header-menu-item-special-font-family;
-    font-size:20px;
-    line-height: 28px;
+    font-size:1.25em;
+    line-height: 1.5em;
 }
 
 .header__menu-item-special a {
     background-color: rgba(139, 0, 0, 1);
     border:solid rgba(183, 18, 27, 1) 3px;
     border-radius: 50px;
-    padding:4px;
+    padding:0.2em;
     transition: .4s color, .4s background-color;
 }
 
@@ -74,7 +74,7 @@
     grid-row: 2 / 3;
     justify-self: center;
     color:#fff;
-    font-size:59px;
+    font-size:3.6875em;
     font-family: 'Press Start 2P', cursive;
 }
 
@@ -99,7 +99,7 @@
 }
 
 .main {
-    margin:88px 0 40px 0;
+    margin:5.5em 0 2.5em 0;
     display:grid;
     grid-template-columns: 1fr 5.6fr 1fr;
     grid-template-rows: auto;
@@ -113,26 +113,26 @@
     display:flex;
     flex-wrap:wrap;
     justify-content: space-between;
-    margin-bottom:30px;
+    margin-bottom:1.875em;
 }
 
 .fragment__paragraph {
-    flex-basis:550px;
+    flex-basis:34.375em;
     align-self: center;
 }
 
 .fragment__featured-image {
-    flex-basis:550px;
+    flex-basis:34.375em;
     border:4px solid transparent;
-    padding:0 0 50px;
+    padding:0 0 3.125em;
     box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 .fragment__subtitle {
     font-family: 'Open Sans Condensed', sans-serif;
     color:#8b0000;
-    font-size:26px;
-    line-height: 7px;
+    font-size:1.625em;
+    line-height: 0.4375em;
     font-weight: normal;
     margin-bottom:0;
     margin-top:0;
@@ -141,7 +141,7 @@
 .fragment__title {
     font-family: 'Anton', sans-serif;
     color:#414141;
-    font-size:48px;
+    font-size:3em;
     font-weight: normal;
     letter-spacing: -0.01em;
     text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px;
@@ -154,25 +154,25 @@
     color:#414141;
     text-shadow: #ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
     letter-spacing: 0.3em;
-    font-size:55px;
+    font-size:3.4375em;
     text-align: center;
     text-transform: uppercase;
-    padding-top:27px;
+    padding-top:0.4909090909090909em;
     margin-bottom:0;
     grid-column: 2 / 3;
 }
 
 .fragment__title--red {
     font-family:Impact, sans-serif;
-    font-size:64px;
+    font-size:4em;
     color:#b7121b;
-    padding-top:61px;
+    padding-top:0.953125em;
     text-align: center;
 }
 
 .fragment__content {
     font-family: 'Raleway', sans-serif;
-    font-size:21px;
+    font-size:1.3125em;
     line-height: 1.4em;
     color:#000;
     text-indent:2.2em;
@@ -182,19 +182,19 @@
 
 .fragment__button {
     font-family: Helvetica, sans-serif;
-    font-size:29px;
+    font-size:1.8125em;
     font-weight: bold;
     text-align: center;
     position: relative;
-    top:59px;
-    margin-bottom:64px;
+    top:2.0344827586206895em;
+    margin-bottom:2.206896551724138em;
 }
 
 .fragment__button a {
     background-color: rgba(139, 0, 0, 1);
     border:solid rgba(183, 18, 27, 1) 3px;
     border-radius: 50px;
-    padding:12px;
+    padding:0.41379310344827586em;
     transition: .4s color, .4s background-color;
     color:#fff;
     text-decoration: none;
@@ -209,7 +209,7 @@
 .fragment--bg-red {
     background-color:#D94141;
     position: relative;
-    top:40px;
+    top:2.5em;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -221,12 +221,12 @@
 }
 
 .fragment--tight {
-    padding:0 200px 0 200px;
+    padding:0 12.5em 0 12.5em;
 }
 
 .fragment__content--white {
     font-family: 'Montserrat', sans-serif;
-    font-size:22px;
+    font-size:1.375em;
     color:#fff;
     text-shadow:#c8c8c8 1px 1px 0px, #b4b4b4 0px 2px 0px, #a0a0a0 0px 3px 0px, rgba(140, 140, 140, 0.498039) 0px 4px 0px, #787878 0px 0px 0px, rgba(0, 0, 0, 0.498039) 0px 5px 10px;
     text-indent: 0;
@@ -236,7 +236,7 @@
 }
 
 .fragment__content--white p {
-    padding-bottom:15px;
+    padding-bottom:0.6818181818181818em;
 }
 
 .fragment__content--white p img {
@@ -249,7 +249,7 @@
     display:flex;
     justify-content: space-between;
     text-indent:0;
-    min-height:795px;
+    min-height:37.857142857142854em;
 }
 
 .fragment__item-left, .fragment__item-center, .fragment__item-right {
@@ -257,23 +257,23 @@
 }
 
 .fragment__item-left {
-    margin-top:110px;
-    flex-basis:280px;
+    margin-top:5.238095238095238em;
+    flex-basis:13.333333333333334em;
 }
 
 .fragment__item-center {
-    flex-basis:380px;
+    flex-basis:18.095238095238095em;
 }
 
 .fragment__item-right {
-    margin-top:110px;
-    flex-basis:280px;
+    margin-top:5.238095238095238em;
+    flex-basis:13.333333333333334em;
 }
 
 .fragment__item-left p, .fragment__item-center p, .fragment__item-right p {
     line-height: normal;
     letter-spacing: normal;
-    padding:5px 3px 5px 3px;
+    padding:0.23809523809523808em 0.14285714285714285em 0.23809523809523808em 0.14285714285714285em;
 }
 
 .fragment__item-image img {
@@ -284,30 +284,30 @@
 .fragment__title--contact {
     color:#414141;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size:81px;
+    font-size:5.0625em;
     text-shadow: #ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
     font-weight: bold;
     text-align: center;
 }
 
 .fragment__content--form {
-    margin:105px 100px 0 100px;
+    margin:5em 4.761904761904762em 0 4.761904761904762em;
     text-indent: 0;
 }
 
 .form-input {
-    padding:5px 10px;
+    padding:0.23809523809523808em 0.47619047619047616em;
     font-family:'Raleway', sans-serif;
     color:#414141;
     box-shadow: 4.11px 5.66px 0px 0px rgba(0,0,0,0.39);
     border:4px solid rgba(183, 18, 27, 1);
     width:100%;
-    margin-bottom:12px;
+    margin-bottom:0.5714285714285714em;
     outline: none;
 }
 
 .form-textarea-row {
-    height: 150px;
+    height: 7.142857142857143em;
     width:calc(100% + 27px);
     box-sizing: border-box;
     overflow: hidden;
@@ -321,7 +321,7 @@
     resize: none;
     margin:0;
     height:85%;
-    padding:5px 10px;
+    padding:0.23809523809523808em 0.47619047619047616em;
     font-family:'Raleway', sans-serif;
     color:#414141;
     outline:none;
@@ -339,17 +339,17 @@
     border:3px solid rgba(183, 18, 27, 1);
     background-color: rgba(217, 65, 65, 1);
     color:#fff;
-    min-width:150px;
-    min-height: 55px;
-    line-height: 55px;
-    margin:-19px auto 15px auto;
+    min-width:7.142857142857143em;
+    min-height: 2.619047619047619em;
+    line-height: 2.619047619047619em;
+    margin:-0.9047619047619048em auto 0.7142857142857143em auto;
     display:block;
     font-family:'Raleway', sans-serif;
 }
 
 .footer__copyright {
     font-family: 'Raleway', sans-serif;
-    font-size:17px;
+    font-size:1.0625em;
     color:#fff;
     margin:0;
     padding:0;
@@ -357,14 +357,14 @@
 
 .footer {
     background-color:#7B7B7B;
-    height: 90px;
+    height: 5.625em;
     display:flex;
     align-items: center;
     flex-direction: column;
 }
 
 .footer__social-media-nav {
-    padding:11.5px;
+    padding:0.71875em;
 }
 
 .footer__social-media-menu {
@@ -375,5 +375,7 @@
 
 .footer__social-media-menu li {
     display:inline-block;
-    margin:0 5px 0 5px;
+    margin:0 0.3125em 0 0.3125em;
 }
+
+@import 'mobile';
