--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -9,6 +9,23 @@
         font-size:2.9em;
     }
 
+    .header {
+        padding-top:0;
+    }
+
+    .blinking-cursor {
+        display:none;
+    }
+
+    .header__nav {
+        display:none;
+    }
+
+    .header__page-header {
+        grid-row:1 / 3;
+        align-self:center;
+    }
+
     .fragment__item {
         flex-direction: column;
         justify-content: center;
@@ -23,6 +40,14 @@
     .fragment__featured-image {
         flex-basis:0;
         align-self: center;
+    }
+    
+    .fragment--odd .fragment__featured-image {
+        order:1;
+    }
+
+    .fragment--odd .fragment__paragraph {
+        order:0;
     }
 }
 
