--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -111,21 +111,37 @@
 
 .fragment__item {
     display:flex;
-    flex-wrap:wrap;
+    flex-wrap:nowrap;
     justify-content: space-between;
     margin-bottom:1.875em;
 }
 
 .fragment__paragraph {
-    flex-basis:34.375em;
+    flex:1 1 34.375em;
     align-self: center;
+    margin:0 100px 0 0;
 }
 
 .fragment__featured-image {
-    flex-basis:34.375em;
+    flex:1 1 34.375em;
     border:4px solid transparent;
     padding:0 0 3.125em;
     box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.1);
+    margin:0 0 0 100px;
+    align-self: center;
+}
+
+.fragment__featured-image img {
+    width:100%;
+    height: auto;
+}
+
+.fragment--odd > .fragment__paragraph {
+    margin:0 0 0 100px;
+}
+
+.fragment--odd > .fragment__featured-image {
+    margin:0 100px 0 0;
 }
 
 .fragment__subtitle {
