--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-@import url('https://fonts.googleapis.com/css?family=Jura');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
-@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Raleway&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Jura&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Anton&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
