--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -17,6 +17,10 @@
 }
 
 @media only screen and (max-width: 1150px) {
+    .main {
+        grid-template-columns: 0.5fr 20fr 0.5fr;
+    }
+
     .header__page-header {
         font-size:2.9em;
     }
