--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -16,6 +16,12 @@
     }
 }
 
+@media only screen and (max-width:1500px) {
+    .fragment--medium {
+        padding:0;
+    }
+}
+
 @media only screen and (max-width: 1150px) {
     .main {
         grid-template-columns: 0.5fr 20fr 0.5fr;
