--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -241,10 +241,6 @@
     padding:0 12.5em 0 12.5em;
 }
 
-.fragment--medium {
-    padding:0 6em 0 6em;
-}
-
 .fragment__content--white {
     font-family: 'Montserrat', sans-serif;
     font-size:1.2em;
@@ -275,20 +271,8 @@
 
 .fragment__item-left, .fragment__item-center, .fragment__item-right {
     text-align:center;
-}
-
-.fragment__item-left {
-    margin-top:5.238095238095238em;
-    flex-basis:29%;
-}
-
-.fragment__item-center {
-    flex-basis:29%;
-}
-
-.fragment__item-right {
-    margin-top:5.238095238095238em;
-    flex-basis:29%;
+    margin:1.5em 0.3em 0 0.3em;
+    flex:1;
 }
 
 .fragment__item-left p, .fragment__item-center p, .fragment__item-right p {
